tests/ui/parser/diff-markers/item-with-attr.stderr
error: encountered git conflict marker
  --> $DIR/item-with-attr.rs:2:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ between this marker and `=======` is the code that we're merging into
LL | fn foo() {}
LL | =======
   | ------- between this marker and `>>>>>>>` is the incoming code
LL | fn bar() {}
LL | >>>>>>> branch
   | ^^^^^^^
   |
   = help: conflict markers indicate that a merge was started but could not be completed due to merge conflicts
   = help: to resolve a conflict, keep only the code you want and then delete the lines containing conflict markers
   = note: for more information, visit the `git` documentation <https://git-scm.com/book/en/v2/Git-Tools-Advanced-Merging#_checking_out_conflicts>

error: aborting due to previous error

