tests/ui/parser/diff-markers/item-with-attr.rs
#[attribute]
<<<<<<< HEAD //~ ERROR encountered diff marker
fn foo() {}
=======
fn bar() {}
>>>>>>> branch

fn main() {
    foo();
}
